--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-nextjs-toast": "^1.2.5",
     "sass": "^1.45.0"
   },
   "devDependencies": {
